# qcash

./: .gitignore  Cargo.toml  LICENSE  README.md  com.qcash.daemon.json  com.qcash.daemon.json.example  daemon_wrapper.sh  daemon_wrapper.sh.example  test_daemon.sh  view_logs.sh  wallet.json
core/: Cargo.toml
core/src/: lib.rs  wallet.rs
daemon/: Cargo.toml
daemon/src/: key_manager.rs  main.rs
extension/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
extension/public/: background.js  manifest.json
extension/src/: App.css  App.tsx  background.ts  index.css  main.tsx
extension/src/components/: FundWalletCard.tsx  SendTokenModal.tsx
extension/src/components/ui/: button.tsx  card.tsx  input.tsx
extension/src/context/: WalletContext.tsx  WasmContext.tsx
extension/src/hooks/: useKeyManager.ts  useLedgerSync.ts  useSolana.ts  useTransfer.ts  useWasm.ts
extension/src/idl/: qcash_program.json  solana_programs.ts
extension/src/lib/: popout.ts
extension/src/pages/: Dashboard.tsx  IdentityReveal.tsx  SeedGeneration.tsx  Welcome.tsx
extension/src/utils/: syncUtils.ts
interface/: Cargo.toml  build.rs
interface/src/: lib.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: lib.rs
node/: Cargo.toml
node/src/: lib.rs  main.rs
qcash-faucet/: faucet-wallet.json
qcash-faucet/backend/: Cargo.toml
qcash-faucet/backend-ts/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
qcash-faucet/backend-ts/idl/: solana_programs.json  solana_programs.ts
qcash-faucet/backend-ts/src/: index.ts
qcash-faucet/backend-ts/src/idl/: solana_programs.json  solana_programs.ts
qcash-faucet/backend/src/: main.rs
qcash-faucet/frontend/: index.html  package-lock.json
qcash-faucet/frontend/src/: App.tsx  index.css  main.tsx
qcash_programs/programs/qcash_programs/: Cargo.toml
qcash_programs/programs/qcash_programs/src/: error.rs  lib.rs
qcash_programs/programs/qcash_programs/src/handlers/: init_vault.rs  mod.rs  register_vault.rs
solana/: Anchor.toml  package-lock.json  package.json
solana/programs/qcash/: Cargo.toml
solana/programs/qcash/src/: constants.rs  error.rs  lib.rs
solana/programs/qcash/src/events/: airdrop_completed.rs  attestation_submitted.rs  ledger_initialized.rs  loader_chunk_written.rs  loader_initialized.rs  mod.rs  program_initialized.rs  prover_deactivated.rs  prover_registered.rs  utxo_created.rs  vault_completed.rs  vault_initialized.rs  zk_proof_chunk_written.rs  zk_proof_initialized.rs
solana/programs/qcash/src/handlers/: airdrop.rs  append_to_ledger.rs  complete_vault.rs  create_utxo.rs  deactivate_prover.rs  init_ledger.rs  init_program.rs  init_vault.rs  mod.rs  register_prover.rs  submit_attestation.rs  transfer.rs  upload_ciphertext.rs  upload_zk_proof.rs
solana/programs/qcash/src/state/: ledger.rs  loader.rs  mod.rs  program_config.rs  proof.rs  prover_registry.rs  utxo.rs
solana/scripts/: init.ts  init_ledger.ts
solana/tests/: solana_programs.ts
solana_programs/: Anchor.toml
solana_programs/programs/qcash_programs/src/: error.rs
solana_programs/programs/qcash_programs/src/handlers/: mod.rs  register_vault.rs
solana_programs/programs/qcash_programs/src/state/: vault.rs
solana_programs/tests/: solana_programs.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
