[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_arrays = "0.1"
pqc_kyber = {version="0.7.1", default-features = false}
rand_core = {version="0.9.5", default-features = false}
hmac = {version="0.12.1", default-features = false}
sha2 = {version="0.10.9", default-features = false}
bip39 = {version = "2.2.2", default-features = false, features = ["rand"]}
