[package]
name = "qcash_core"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["bip39/std", "sha2/std", "serde/std"]
wallet = ["dep:ed25519-dalek", "dep:ed25519-dalek-bip32", "dep:bs58"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_arrays = "0.1"
bip39 = {version = "2.2.2", default-features = false, features = ["rand"]}
hmac = {version="0.12.1", default-features = false}
pqc_kyber = {version="0.7.1", default-features = false}
sha2 = {version="0.10.9", default-features = false}

ed25519-dalek = {version="2.2.0", optional = true}
ed25519-dalek-bip32 = {version="0.3.0", optional = true}
bs58 = {version="0.5.1", optional = true}
