[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
methods = { path = "../methods" }
risc0-zkvm = "3.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hex = "0.4.3"
base64 = "0.22.1"
bincode = "1.3"
byteorder = "1.5.0"
sha2 = "0.10"
