[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
futures = "0.3.31"
risc0-zkvm = "3.0.4"
solana-client = "2.3"
solana-pubsub-client = "2.3"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "json",
    "time",
    "env-filter",
] }

solana-sdk = "2.3"
sha2 = "0.10"

interface = { path = "../interface" }
qcash = { path = "../solana/programs/qcash" }
bincode = "1.3"
anchor-lang = "0.32.1"
hex = "0.4.3"
