[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
libc = "0.2.180"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-sdk = "2"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

interface = { path = "../interface" }
solana-client = "2"
