[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
tokio = { version = "1.49.0", features = ["full"] }
actix-web = "4.12.1"
serde = "1.0.228"
serde_json = "1.0.149"
anyhow = "1.0.100"
hex = "0.4.3"
bs58 = "0.5.1"
solana-sdk = "3.0.0"
solana-client = "3.1.7"
anchor-client = "0.32.1"
dotenv = "0.15.0"
# qcash-core = { path = "../core"}
pqc_kyber = "0.7.1"
actix-cors = "0.7.1"
